--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -15,3 +15,12 @@ body {
     fixed;
   color: white;
 }
+
+body::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  z-index: -1;
+}
